--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.13.5",
     "clsx": "^2.1.1",
+    "motion": "^11.14.4",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
