--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   "dependencies": {
     "@chakra-ui/react": "^3.2.3",
     "@emotion/react": "^11.13.5",
+    "@react-email/components": "^0.0.33",
     "clsx": "^2.1.1",
     "motion": "^11.14.4",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-email": "^3.0.7",
     "react-error-boundary": "^4.1.2",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^7.0.1"
+    "react-router-dom": "^7.0.1",
+    "resend": "^4.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.1",
